# APE

./: .env.example  .gitignore  output.txt  pyproject.toml  run_dashboard.py
.claude/: settings.local.json
app/: dashboard.py  main.py  models.py
app/agents/: audio_agent.py  gesture_agent.py  inventory_agent.py  vision_agent.py
app/team/: supervisor.py
app/tools/: __init__.py  audio_tools.py  base.py  gesture_tools.py  inventory_tools.py  vision_tools.py
