[project]
name = "chemical-warehouse-dock"
version = "0.1.0"
description = "Multi-agent orchestration for chemical warehouse dock inspection"
requires-python = ">=3.10"
dependencies = [
    "agno",
    "ollama",
    "pydantic",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
